--- a/templates/consulta.html
+++ b/templates/consulta.html
@@ -7,6 +7,7 @@
     <label for="fecha" class="form-label">Elegí una fecha:</label>
     <input type="text" id="fecha" name="fecha" class="form-control" required>
   </div>
+  <a href="{{ url_for('bloquear_fechas') }}" class="btn btn-warning">Bloquear fechas</a>
   <button type="submit" class="btn btn-primary">Ver Turnos</button>
 </form>
 
