bloquear fechas y horas

--- a/templates/bloquear_fechas.html
+++ b/templates/bloquear_fechas.html
@@ -14,6 +14,10 @@
             <label for="fecha_fin">Fecha hasta (opcional):</label>
             <input type="date" class="form-control" id="fecha_fin" name="fecha_fin">
         </div>
+        <div class="form-group">
+            <label for="hora_desde">Hora desde:</label>
+            <input type="time" class="form-control" id="hora_desde" name="hora_desde">
+        </div>
         <button type="submit" class="btn btn-danger mt-3">Bloquear fechas</button>
     </form>
 
